--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,8 @@
 				<div class="span8">
 					<div class="account pull-right">
 						<ul class="user-menu">				
-							<li><a href="#">My Account test</a></li>
-							<li><a href="cart.html">Your Cart12</a></li>
+							<li><a href="#">My Account</a></li>
+							<li><a href="cart.html">Your Cart</a></li>
 							<li><a href="checkout.html">Checkout</a></li>					
 							<li><a href="register.html">Login</a></li>			
 						</ul>
