--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						<div class="row">
 							<div class="span12">
 								<h4 class="title">
-									<span class="pull-left"><span class="text"><span class="line">Feature <strong>Products</strong></span></span></span>
+									<span class="pull-left"><span class="text"><span class="line">Best Deals <strong>for YOU</strong></span></span></span>
 									<span class="pull-right">
 										<a class="left button" href="#myCarousel" data-slide="prev"></a><a class="right button" href="#myCarousel" data-slide="next"></a>
 									</span>
@@ -159,9 +159,9 @@
 												<li class="span3">
 													<div class="product-box">
 														<p><a href="product_detail.html"><img src="themes/images/ladies/6.jpg" alt="" /></a></p>
-														<a href="product_detail.html" class="title">Ut wisi enim ad</a><br/>
-														<a href="products.html" class="category">Commodo consequat</a>
-														<p class="price">$40.25</p>
+														<a href="product_detail.html" class="title">Sparx Womens Sl-88 Running Shoe</a><br/>
+														<a href="https://amzn.to/3sAtO92" class="category">Buy Amazon</a>
+														<p class="price">Check on Amazon</p>
 													</div>
 												</li>
 												<li class="span3">
@@ -204,8 +204,8 @@
 														<span class="sale_tag"></span>
 														<p><a href="product_detail.html"><img src="themes/images/cloth/bootstrap-women-ware2.jpg" alt="" /></a></p>
 														<a href="product_detail.html" class="title">Ut wisi enim ad</a><br/>
-														<a href="products.html" class="category">Commodo consequat</a>
-														<p class="price">$25.50</p>
+														<a href="https://amzn.to/3sAtO92" target="_blank" class="category">Buy on Amazon</a>
+														<p class="price">Check on Amazon</p>
 													</div>
 												</li>
 												<li class="span3">
