--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								</ul>
 							</li>							
 							<li><a href="./products.html">Hangbag</a></li>
-							<li><a href="./products.html">Best Seller</a></li>
+							<li><a href="./best_sellers.html">Best Seller</a></li>
 							<li><a href="./products.html">Top Seller</a></li>
 						</ul>
 					</nav>
