first bulk commit

--- a/header_test.html
+++ b/header_test.html
@@ -17,16 +17,12 @@
 
     </head>
     <body>	<div id="top-bar" class="container">
-         <div class="row">
+        <div class="row">
             <div class="span4">
-                <a href="index.html" class="logo pull-left"><img src="themes/images/logo/logokmd.png" class="site_logo" alt=""></a>
-      
-            </div>
-            <!-- <div class="span4">
                 <form method="POST" class="search_form">
                     <input type="text" class="input-block-level search-query" Placeholder="eg. T-sirt">
                 </form>
-            </div> -->
+            </div>
             <div class="span8">
                 <div class="account pull-right">
                     <ul class="user-menu">				
@@ -43,13 +39,13 @@
     <div id="wrapper" class="container">
         <section class="navbar main-menu">
             <div class="navbar-inner main-menu">	
-              			
-                 <nav id="menu" class="pull-right">
+                <a href="index.html" class="logo pull-left"><img src="themes/images/logo/kickmydeals.PNG" class="site_logo" alt=""></a>
+                <nav id="menu" class="pull-right">
                     <ul>
                         <li><a href="./products.html">Woman</a>					
                             <ul>
                                 <li><a href="./products.html">Clothing</a></li>									
-                                <li><a href="./women_footware.html">Footware</a></li>
+                                <li><a href="./products.html">Footware</a></li>
                                 <li><a href="./products.html">Watches</a></li>
                                 <li><a href="./products.html">Personal Care</a></li>
                                 <li><a href="./products.html">Beauty & grooming</a></li>
