--- a/women_footware.html
+++ b/women_footware.html
@@ -29,10 +29,10 @@
     <body>
 		<div id="header"></div>
 		<div id="wrapper" class="container">
-            <!-- <section class="header_text sub">
+            <section class="header_text sub">
                 <img class="pageBanner" src="themes/images/pageBanner.png" alt="New products" >
                     <h4><span>New products</span></h4>
-                </section> -->
+                </section>
                 <section class="main-content">
                     
                     <div class="row">						
@@ -41,10 +41,10 @@
                                 <li class="span3">
                                     <div class="product-box">
                                         <span class="sale_tag"></span>												
-                                        <a href="product_detail.html"><img alt="" src="themes/images/ladies/9.jpg"></a><br/>
-                                        <a href="product_detail.html" class="title">Fusce id molestie massa</a><br/>
-                                        <a href="#" class="category">Phasellus consequat</a>
-                                        <p class="price">$341</p>
+                                        <a href="product_detail.html"><img alt="" src="themes/images/women_shoes/81FKbOXlo2L._UL1500_.jpg"></a><br/>
+                                        <a href="product_detail.html" class="title">Flavia Beige Running Shoes</a><br/>
+                                        <a href="#" class="category"><img src="themes/images/logo/amazon_store.png"></a>
+                                        <p class="price">INR 671</p>
                                     </div>
                                 </li>       
                                 <li class="span3">
