affliliate link update

--- a/best_sellers.html
+++ b/best_sellers.html
@@ -40,15 +40,15 @@
                                         <span class="sale_tag"></span>												
                                         <a href="product_detail.html"><img alt="" src="themes/images/women_shoes/81FKbOXlo2L._UL1500_.jpg"></a><br/>
                                         <a href="product_detail.html" class="title">Flavia Beige Running Shoes</a><br/>
-                                        <a href="#" class="category"><img src="themes/images/logo/amazon_store.png"></a>
+                                        <a href="https://amzn.to/39Yu8Wv" target="_blank" class="category"><img src="themes/images/logo/amazon_store.png"></a>
                                         <p class="price">₹ 671</p>
                                     </div>
                                 </li>       
                                 <li class="span3">
                                     <div class="product-box">												
-                                        <a href="product_detail.html"><img alt="" src="themes/images/home/wall clock.jpg"></a><br/>
-                                        <a href="product_detail.html" class="title">Story@Home Round Shape Wall Clock </a><br/>
-                                        <a href="#" class="category"><img src="themes/images/logo/amazon_store.png"></a>
+                                        <a href="product_detail.html"><img alt="" src="themes/images/home/wclock2.jpg"></a><br/>
+                                        <a href="product_detail.html" class="title">Amazon Brand Wall Clock - Designer </a><br/>
+                                        <a href="https://amzn.to/3682dCl" target="_blank" class="category"><img src="themes/images/logo/amazon_store.png"></a>
                                         <p class="price">₹ 319</p>
                                     </div>
                                 </li>
