--- a/footer.html
+++ b/footer.html
@@ -20,21 +20,32 @@
                         <li><a href="#">Newsletter</a></li>
                     </ul>
                 </div>
-                <div class="span5">
-                    <p class="logo"><img src="themes/images/logo/logokmd.png" class="site_logo" alt=""></p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. the  Lorem Ipsum has been the industry's standard dummy text ever since the you.</p>
-                    <br/>
-                    <span class="social_icons">
+                <div class="span4">
+                    <h4>My Account</h4>
+                    <ul class="nav">
+                        <li><a href="#">My Account</a></li>
+                        <li><a href="#">Order History</a></li>
+                        <li><a href="#">Wish List</a></li>
+                        <li><a href="#">Newsletter</a></li>
+                    </ul>
+                </div>
+
+                <!-- <div class="span5">
+                    <span><img src="themes/images/logo/logokmd.png" class="site_logo" alt=""></span>
+                    <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. the  Lorem Ipsum has been the industry's standard dummy text ever since the you.</p>
+                    </span> -->
+                    
+                    <!-- <span class="social_icons">
                         <a class="facebook" href="#">Facebook</a>
                         <a class="twitter" href="#">Twitter</a>
                         <a class="skype" href="#">Skype</a>
                         <a class="vimeo" href="#">Vimeo</a>
-                    </span>
-                </div>					
+                    </span> 
+                </div>		-->			
             </div>	
         </section>
         <section id="copyright">
-            <span>Copyright 2013 bootstrappage template  All right reserved.</span>
+            <span>@2020 KickMyDeals.com</span>
         </section>
         </div>
 
