--- a/src/products/electronics/el_mobiles.html
+++ b/src/products/electronics/el_mobiles.html
@@ -18,6 +18,8 @@
     <!-- <link href="${request.contextPath}/themes/css/main.css" rel="stylesheet" /> -->
 
     <!-- scripts -->
+    <base href="https://kickmydeals.com/default/">
+    <link href="/themes/css/main.css" rel="stylesheet" />
     <script src="/themes/js/jquery-1.7.2.min.js"></script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
     <script src="/themes/js/superfish.js"></script>
@@ -53,7 +55,7 @@
                                                 <div class="product-box">
                                                     <span class="sale_tag"></span>
                                                     <p>
-                                                        <a href="https://amzn.to/3iY1F7s" target="blank"><img src="../../../themes/images/products/electronics/bt_speakers/1_1001_infnity.jpg" alt="" /></a>
+                                                        <a href="https://amzn.to/3iY1F7s" target="blank"><img src="/themes/images/products/electronics/bt_speakers/1_1001_infnity.jpg" alt="" /></a>
                                                     </p>
                                                     <div class="fixedhight"><a class="title">Infinity (JBL) Fuze Pint Deep Bass Dual EQ Bluetooth 5.0</a></div>
                                                     <a href="https://amzn.to/2MB2siD" class="amazonbutton" target="blank">
@@ -65,7 +67,7 @@
                                                 <div class="product-box">
                                                     <span class="sale_tag"></span>
                                                     <p>
-                                                        <a href="https://amzn.to/3iY1F7s" target="blank"><img src="../../../themes/images/products/electronics/bt_speakers/2_1000_mi.jpg" alt="" /></a>
+                                                        <a href="https://amzn.to/3iY1F7s" target="blank"><img src="/themes/images/products/electronics/bt_speakers/2_1000_mi.jpg" alt="" /></a>
                                                     </p>
                                                     <div class="fixedhight"><a class="title">Mi Bluetooth Speaker 2 with mic and 6hrs Battery</a></div>
                                                     <a href="https://amzn.to/3iY1F7s" class="amazonbutton" target="blank">
@@ -77,7 +79,7 @@
                                                     <span class="sale_tag"></span>
                                                     <p>
                                                         <a href="https://www.amazon.in/boAt-Stone-Bluetooth-Speaker-Black/dp/B08JMC1988?dchild=1&keywords=boAt+Stone+180+5W+Bluetooth+Speaker&qid=1611994036&sr=8-1&linkCode=sl1&tag=amzn0a3-21&linkId=cf21a18aad7c04e370dd6ef393925f62&language=en_IN&ref_=as_li_ss_tl"
-                                                            target="blank"><img src="../../../themes/images/products/electronics/bt_speakers/3_1000_boat.jpg" alt="" /></a>
+                                                            target="blank"><img src="/themes/images/products/electronics/bt_speakers/3_1000_boat.jpg" alt="" /></a>
                                                     </p>
                                                     <div class="fixedhight"><a class="title">boAt Stone 180 5W Bluetooth Speaker</a></div>
                                                     <a href="https://www.amazon.in/boAt-Stone-Bluetooth-Speaker-Black/dp/B08JMC1988?dchild=1&keywords=boAt+Stone+180+5W+Bluetooth+Speaker&qid=1611994036&sr=8-1&linkCode=sl1&tag=amzn0a3-21&linkId=cf21a18aad7c04e370dd6ef393925f62&language=en_IN&ref_=as_li_ss_tl
@@ -91,7 +93,7 @@
                                                 <div class="product-box">
                                                     <span class="sale_tag"></span>
                                                     <p>
-                                                        <a href="https://amzn.to/2MHVoAQ" target="blank"><img src="../../../themes/images/products/electronics/bt_speakers/4_1000_iball.jpg" alt="" /></a>
+                                                        <a href="https://amzn.to/2MHVoAQ" target="blank"><img src="/themes/images/products/electronics/bt_speakers/4_1000_iball.jpg" alt="" /></a>
                                                     </p>
                                                     <div class="fixedhight"><a class="title">iBall Musi Play A1 Wireless Ultra-Portable Bluetooth Speakers with FM | Mic</a>
                                                     </div>
@@ -103,7 +105,7 @@
                                                 <div class="product-box">
                                                     <span class="sale_tag"></span>
                                                     <p>
-                                                        <a href="product_detail.html"><img src="../../../themes/images/products/electronics/bt_speakers/6_1000_bounce.jpg" alt="" /></a>
+                                                        <a href="product_detail.html"><img src="/themes/images/products/electronics/bt_speakers/6_1000_bounce.jpg" alt="" /></a>
                                                     </p>
 
                                                     <div class="fixedhight"><a class="title">Portronics Bounce POR-939 Portable Wireless Bluetooth Speaker with FM & USB Music (Black)</a>
@@ -121,7 +123,7 @@
                                                 <div class="product-box">
                                                     <span class="sale_tag"></span>
                                                     <p>
-                                                        <a href="https://amzn.to/3iY1F7s" target="blank"><img src="../../../themes/images/products/electronics/bt_speakers/1_1001_infnity.jpg" alt="" /></a>
+                                                        <a href="https://amzn.to/3iY1F7s" target="blank"><img src="/themes/images/products/electronics/bt_speakers/1_1001_infnity.jpg" alt="" /></a>
                                                     </p>
                                                     <div class="fixedhight"><a class="title">Infinity (JBL) Fuze Pint Deep Bass Dual EQ Bluetooth 5.0</a></div>
                                                     <a href="https://amzn.to/2MB2siD" class="amazonbutton" target="blank">
@@ -133,7 +135,7 @@
                                                 <div class="product-box">
                                                     <span class="sale_tag"></span>
                                                     <p>
-                                                        <a href="https://amzn.to/3iY1F7s" target="blank"><img src="../../../themes/images/products/electronics/bt_speakers/2_1000_mi.jpg" alt="" /></a>
+                                                        <a href="https://amzn.to/3iY1F7s" target="blank"><img src="/themes/images/products/electronics/bt_speakers/2_1000_mi.jpg" alt="" /></a>
                                                     </p>
                                                     <div class="fixedhight"><a class="title">Mi Bluetooth Speaker 2 with mic and 6hrs Battery</a></div>
                                                     <a href="https://amzn.to/3iY1F7s" class="amazonbutton" target="blank">
@@ -159,7 +161,7 @@
                                                 <div class="product-box">
                                                     <span class="sale_tag"></span>
                                                     <p>
-                                                        <a href="https://amzn.to/2MHVoAQ" target="blank"><img src="../../../themes/images/products/electronics/bt_speakers/4_1000_iball.jpg" alt="" /></a>
+                                                        <a href="https://amzn.to/2MHVoAQ" target="blank"><img src="/themes/images/products/electronics/bt_speakers/4_1000_iball.jpg" alt="" /></a>
                                                     </p>
                                                     <div class="fixedhight"><a class="title">iBall Musi Play A1 Wireless Ultra-Portable Bluetooth Speakers with FM | Mic</a>
                                                     </div>
@@ -171,7 +173,7 @@
                                                 <div class="product-box">
                                                     <span class="sale_tag"></span>
                                                     <p>
-                                                        <a href="product_detail.html"><img src="../../../themes/images/products/electronics/bt_speakers/6_1000_bounce.jpg" alt="" /></a>
+                                                        <a href="product_detail.html"><img src="/themes/images/products/electronics/bt_speakers/6_1000_bounce.jpg" alt="" /></a>
                                                     </p>
 
                                                     <div class="fixedhight"><a class="title">Portronics Bounce POR-939 Portable Wireless Bluetooth Speaker with FM & USB Music (Black)</a>
@@ -205,7 +207,7 @@
                                                 <div class="product-box">
                                                     <span class="sale_tag"></span>
                                                     <p>
-                                                        <a href="https://amzn.to/3iY1F7s" target="blank"><img src="../../../themes/images/products/electronics/bt_speakers/1_1001_infnity.jpg" alt="" /></a>
+                                                        <a href="https://amzn.to/3iY1F7s" target="blank"><img src="/themes/images/products/electronics/bt_speakers/1_1001_infnity.jpg" alt="" /></a>
                                                     </p>
                                                     <div class="fixedhight"><a class="title">Infinity (JBL) Fuze Pint Deep Bass Dual EQ Bluetooth 5.0</a></div>
                                                     <a href="https://amzn.to/2MB2siD" class="amazonbutton" target="blank">
@@ -217,7 +219,7 @@
                                                 <div class="product-box">
                                                     <span class="sale_tag"></span>
                                                     <p>
-                                                        <a href="https://amzn.to/3iY1F7s" target="blank"><img src="../../../themes/images/products/electronics/bt_speakers/2_1000_mi.jpg" alt="" /></a>
+                                                        <a href="https://amzn.to/3iY1F7s" target="blank"><img src="/themes/images/products/electronics/bt_speakers/2_1000_mi.jpg" alt="" /></a>
                                                     </p>
                                                     <div class="fixedhight"><a class="title">Mi Bluetooth Speaker 2 with mic and 6hrs Battery</a></div>
                                                     <a href="https://amzn.to/3iY1F7s" class="amazonbutton" target="blank">
