--- a/src/products/electronics/el_mobiles.html
+++ b/src/products/electronics/el_mobiles.html
@@ -18,8 +18,9 @@
     <!-- <link href="${request.contextPath}/themes/css/main.css" rel="stylesheet" /> -->
 
     <!-- scripts -->
-    <base href="https://kickmydeals.com/default/">
-    <link href="/themes/css/main.css" rel="stylesheet" />
+    <base href="/themes/css/">
+    <link href="main.css" rel="stylesheet" />
+
     <script src="/themes/js/jquery-1.7.2.min.js"></script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
     <script src="/themes/js/superfish.js"></script>
