--- a/src/products/electronics/el_mobiles.html
+++ b/src/products/electronics/el_mobiles.html
@@ -8,18 +8,19 @@
     <meta name="description" content="">
     <!--[if ie]><meta content='IE=8' http-equiv='X-UA-Compatible'/><![endif]-->
     <!-- bootstrap -->
-    <!-- <link href="../../../bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
-    <!-- <link href="../../../bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet"> -->
+    <link href="../../../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../../bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
 
-    <!-- <link href="../../../themes/css/bootstrappage.css" rel="stylesheet" /> -->
+    <link href="../../../themes/css/bootstrappage.css" rel="stylesheet" />
 
     <!-- global styles -->
-    <!-- <link href="../../../themes/css/flexslider.css" rel="stylesheet" /> -->
-    <!-- <link href="${request.contextPath}/themes/css/main.css" rel="stylesheet" /> -->
+    <link href="../../../themes/css/flexslider.css" rel="stylesheet" />
+    <link href="../../../themes/css/main.css" rel="stylesheet" />
+    <link href="/themes/css/mystyle.css" rel="stylesheet" />
 
     <!-- scripts -->
-    <base href="/themes/css/">
-    <link href="main.css" rel="stylesheet" />
+    <!-- <base href="/themes/css/">
+    <link href="main.css" rel="stylesheet" /> -->
 
     <script src="/themes/js/jquery-1.7.2.min.js"></script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
