--- a/src/products/electronics/ele_speakars.html
+++ b/src/products/electronics/ele_speakars.html
@@ -16,6 +16,7 @@
     <!-- global styles -->
     <link href="../../../themes/css/flexslider.css" rel="stylesheet" />
     <link href="../../../themes/css/main.css" rel="stylesheet" />
+    <link href="/themes/css/mystyle.css" rel="stylesheet" />
 
     <!-- scripts -->
     <script src="../../../themes/js/jquery-1.7.2.min.js"></script>
