--- a/src/products/electronics/el_mobiles.html
+++ b/src/products/electronics/el_mobiles.html
@@ -59,7 +59,7 @@
                                                     <p>
                                                         <a href="https://amzn.to/3iY1F7s" target="blank"><img src="/themes/images/products/electronics/bt_speakers/1_1001_infnity.jpg" alt="" /></a>
                                                     </p>
-                                                    <div class="fixedhight"><a class="title">Infinity (JBL) Fuze Pint Deep Bass Dual EQ Bluetooth 5.0</a></div>
+                                                    <div class="fixedhight" importent><a class="title">Infinity (JBL) Fuze Pint Deep Bass Dual EQ Bluetooth 5.0</a></div>
                                                     <a href="https://amzn.to/2MB2siD" class="amazonbutton" target="blank">
                                                         <font class="amazonbuttonfontstyle">Buy on</font> Amazon</a>
                                                 </div>
