--- a/src/products/electronics/el_mobiles.html
+++ b/src/products/electronics/el_mobiles.html
@@ -15,7 +15,7 @@
 
     <!-- global styles -->
     <link href="../../../themes/css/flexslider.css" rel="stylesheet" />
-    <link href="../../../themes/css/main.css" rel="stylesheet" />
+    <link href="/themes/css/main.css" rel="stylesheet" />
     <link href="/themes/css/mystyle.css" rel="stylesheet" />
 
     <!-- scripts -->
