--- a/src/products/electronics/el_mobiles.html
+++ b/src/products/electronics/el_mobiles.html
@@ -57,7 +57,7 @@
                                                 <div class="product-box">
                                                     <span class="sale_tag"></span>
                                                     <p>
-                                                        <a href="https://amzn.to/3iY1F7s" target="blank"><img src="/themes/images/products/electronics/bt_speakers/1_1001_infnity.jpg" alt="" /></a>
+                                                        <a href="https://amzn.to/3iY1F7s"><img src="/themes/images/products/electronics/bt_speakers/1_1001_infnity.jpg" alt="" /></a>
                                                     </p>
                                                     <div class="fixedhight" importent><a class="title">Infinity (JBL) Fuze Pint Deep Bass Dual EQ Bluetooth 5.0</a></div>
                                                     <a href="https://amzn.to/2MB2siD" class="amazonbutton" target="blank">
