--- a/src/products/electronics/el_mobiles.html
+++ b/src/products/electronics/el_mobiles.html
@@ -57,10 +57,13 @@
                                                 <div class="product-box">
                                                     <span class="sale_tag"></span>
                                                     <p>
-                                                        <a href="https://amzn.to/3iY1F7s"><img src="/themes/images/products/electronics/bt_speakers/1_1001_infnity.jpg" alt="" /></a>
+                                                        <!-- <div class="fixedhightimage"> -->
+                                                        <a href="https://amzn.to/3aj8z3e" target="blank"><img src="/themes/images/products/electronics/mobiles/10k_c15.jpg" alt="" /></a>
+                                                        <!-- </div> -->
                                                     </p>
-                                                    <div class="fixedhight" importent><a class="title">Infinity (JBL) Fuze Pint Deep Bass Dual EQ Bluetooth 5.0</a></div>
-                                                    <a href="https://amzn.to/2MB2siD" class="amazonbutton" target="blank">
+                                                    <div class="fixedhight"><a class="title">Redmi 9 Prime (Mint Green, 4GB RAM, 64GB Storage)- Full HD+ Display & AI Quad Camera
+                                                    </a></div>
+                                                    <a href="https://amzn.to/3aj8z3e" class="amazonbutton" target="blank">
                                                         <font class="amazonbuttonfontstyle">Buy on</font> Amazon</a>
                                                 </div>
                                             </li>
@@ -80,11 +83,12 @@
                                                 <div class="product-box">
                                                     <span class="sale_tag"></span>
                                                     <p>
-                                                        <a href="https://www.amazon.in/boAt-Stone-Bluetooth-Speaker-Black/dp/B08JMC1988?dchild=1&keywords=boAt+Stone+180+5W+Bluetooth+Speaker&qid=1611994036&sr=8-1&linkCode=sl1&tag=amzn0a3-21&linkId=cf21a18aad7c04e370dd6ef393925f62&language=en_IN&ref_=as_li_ss_tl"
-                                                            target="blank"><img src="/themes/images/products/electronics/bt_speakers/3_1000_boat.jpg" alt="" /></a>
+                                                        <a href="https://amzn.to/36oumVU
+                                                        " target="blank"><img src="/themes/images/products/electronics/mobiles/10k_E7p_1.jpeg" alt="" /></a>
                                                     </p>
-                                                    <div class="fixedhight"><a class="title">boAt Stone 180 5W Bluetooth Speaker</a></div>
-                                                    <a href="https://www.amazon.in/boAt-Stone-Bluetooth-Speaker-Black/dp/B08JMC1988?dchild=1&keywords=boAt+Stone+180+5W+Bluetooth+Speaker&qid=1611994036&sr=8-1&linkCode=sl1&tag=amzn0a3-21&linkId=cf21a18aad7c04e370dd6ef393925f62&language=en_IN&ref_=as_li_ss_tl
+                                                    <div class="fixedhight"><a class="title">Motorola E7 Plus (Misty Blue, 64 GB)  (4 GB RAM)</a></div>
+                                                    <a href="https://amzn.to/36oumVU
+
                                                     " class="amazonbutton" target="blank">
                                                         <font class="amazonbuttonfontstyle">Buy on</font> Amazon</a>
                                                 </div>
